    API
  * [SessionS] Added check for missing CGRevent
  * [SessionS] Added *cost flag for SessionSv1.ProcessEvent to calculate
    the rater cost
  * [ConnManager] Added ApierSv2 as internal connection channel instead
    of ApierSv1
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconvertor: *ip2hex
  * [AgentS] Added support for *group type and correctly overwrite
    the values in case of *variable
  * [ERs] Correctly populate ConcurrentRequest from config
  * [FilterS] Updated *exists to dynamically compute the path if the
    path
  * [AgentS] Added support for *tmp path
  * [SessionS] Added new API SessionSv1.GetCost
  * [SessionS] Updateed MaxUsage field from API replies
  * [SessionS] Added support for *cdrs flag in SessionSv1.ProcessEvent
  * [StatS] Update metric definition to include path for example:
    *sum:~*req.Field1
  * [SupplierS] SupplierS require a connection to rals when give
    AccountIDs and RatingPlanIDs to calculate
  * [SupplierS] In case of missing usage from Event use 1 minute as
    default value
  * [DataDB] Mongo support different marshaler than msgpack
  * [ConnManager] Fixed rpc_conns handling id with two connections and one of
    it *internal
  * [Replicator] Added Limit and StaticTTL otions for Items from
    DataDB/StorDB
  * [Migrator] Auto discover tenant from key instead of taking it from config
  * [Templates] Fixed missing "*" for strip and pading strategy
  * [DiameterAgent] Added RAR support
  * [Loader] Added support to load CSV files from URL
  * [Loader] Added configurable gapi_credentials
  * [Loader] Added configurable gapi_token
  * [Agents] Add authentication mechanism for Radius (PAP, CHAP,
    MSCHAPV2)
  * [SessionS] Update subflags for *rals ( *authorize and *initiate )
  * [AgentS] Uniformize flags (*auth -> *authorize)
  * [SessionS] Move *cost as subflag in *rals for